# ics-openvpn

./: .gitignore  .gitmodules  build.sh  gradle.properties  vendor.sh
doc/: README.txt
main/: build.gradle.kts
main/src/main/: AndroidManifest.xml
main/src/main/aidl/de/blinkt/openvpn/core/: IStatusCallbacks.aidl
main/src/main/cpp/: CMakeLists.txt
main/src/main/java/de/blinkt/openvpn/: FileProvider.java  LaunchVPN.java  VpnProfile.java
main/src/main/java/de/blinkt/openvpn/api/: RemoteAction.java
main/src/main/java/de/blinkt/openvpn/core/: ConfigParser.java  Connection.java  DeviceStateReceiver.java  NetworkSpace.java  OpenVPNManagement.java  OpenVPNService.java  OpenVPNStatusService.java  OpenVpnManagementThread.java  OpenVpnProbe.java  ProfileManager.java  SingBoxProcess.java  StatusListener.java  VPNLaunchHelper.java  VpnStatus.java  YdtunProcess.java
main/src/main/res/values/: strings.xml
main/src/ui/java/de/blinkt/openvpn/activities/: MainActivity.kt  VPNPreferences.kt
main/src/ui/java/de/blinkt/openvpn/core/: OpenVPNThreadv3.java
main/src/ui/java/de/blinkt/openvpn/fragments/: Settings_Routing.java  Settings_SingBox.java  Settings_Trusted_Wifi.kt  Settings_Tunnel.java  Settings_Ydtun.java  StatusFragment.java  VPNProfileList.kt
main/src/ui/res/layout/: fragment_status.xml  settings_singbox.xml  settings_tunnel.xml  settings_ydtun.xml  status_card_item.xml  trusted_wifi_item.xml  trusted_wifi_networks.xml  vpn_list_item.xml
main/src/ui/res/xml/: general_settings.xml
